# agentic-sdlc-platform

./: .gitignore  README.md  UX_AUDIT_REPORT.md  UX_PRIORITIZED_ISSUES.md  conftest.py  docker-compose.yml
agent/: README.md  pyproject.toml
agent/bedrock/: README.md
agent/prompts/: README.md  planner_agent.md  requirements_agent.md
agent/src/agent/: __init__.py
agent/src/agent/runtime/: __init__.py  (+5 more)
agent/tools/: README.md
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  conftest.py  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/app/: __init__.py  main.py  startup.py
apps/api/tests/: test_activity.py  test_ai_ops_api.py  test_ai_policy.py  test_app_boot.py  test_architecture_drift_service.py  test_architecture_profile_api.py  test_artifact_diff_api.py  test_codex_executor.py  test_codex_graph_context.py  test_component_capability_api.py  test_config.py  test_content_binding_pipeline.py  test_content_classifier.py  test_content_publish_lifecycle.py  test_cycles.py  test_deployment_runtime.py  test_deployments_api.py  test_documents_api.py  test_error_logging.py  test_execution_contract.py  test_execution_graph_spec.py  test_execution_plane_imports.py  test_external_reference_ingestion.py  test_frontend_composition_governance.py  test_frontend_import_resolver.py  test_frontend_topology_engine.py  test_generation_api.py  test_github_adapter_bootstrap.py  test_github_pr_diff.py  test_github_webhook_signature.py  test_impact.py  test_impact_api.py  test_invariants.py  test_knowledge_api.py  test_knowledge_service.py  test_lifecycle_score_api.py  test_mission_control_memory_timeline_api.py  test_mission_control_overview_api.py  test_mutation_governance.py  test_operator_api.py  (+43 more)
core/: README.md  pyproject.toml
core/src/core/: __init__.py
core/tests/: test_requirement_graph_model.py
(+587 files in other folders)
