[project]
name = "agentic-sdlc-api"
version = "0.1.0"
description = "FastAPI orchestrator for agentic SDLC"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0"
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
  "httpx>=0.27.0"
]
